[package]
name = "funkdigen2"
version = "1.0.0-beta"
edition = "2021"
description = "Generate all functional digraphs up to isomorphism"
authors = [
    "Antonio E. Porreca <antonio.porreca@lis-lab.fr>",
    "Ekaterina Timofeeva <ekatim239@gmail.com>"
]

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }

[profile.release]
strip = "symbols"
