[package]
name = "funkdigen2"
version = "1.0.0"
edition = "2021"
description = "Generate all functional digraphs up to isomorphism"
authors = [
    "Antonio E. Porreca",
    "Ekaterina Timofeeva"
]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }

[profile.release]
strip = "symbols"
