[package]
name = "funkdigen2"
version = "1.2.0"
edition = "2021"
description = "Generate all functional digraphs up to isomorphism"
authors = [
    "Oscar Defrain",
    "Antonio E. Porreca",
    "Ekaterina Timofeeva"
]

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
lazy_static = "1.4.0"

[profile.release]
strip = "symbols"
# debug = true